--- a/app/styles/constants.scss
+++ b/app/styles/constants.scss
@@ -12,3 +12,4 @@ $present: #c9b458;
 $correct: $green;
 
 $breakpoint-tablet: 768px;
+$breakpoint-mobile: 480px;
