--- a/app/styles/stats-modal.scss
+++ b/app/styles/stats-modal.scss
@@ -69,6 +69,10 @@
     flex-direction: row;
     justify-content: center;
 
+    @media (max-width: $breakpoint-mobile) {
+      flex-direction: column;
+    }
+
     &__column {
       flex-grow: 1;
       display: flex;
@@ -78,9 +82,13 @@
       & + & {
         border-left: 1px solid $black;
       }
-    }
-  }
 
-  &__next-game-button {
+      @media (max-width: $breakpoint-mobile) {
+        padding: 8px 24px;
+        & + & {
+          border-left: none;
+        }
+      }
+    }
   }
 }
